<resources>
    <string name="app_name" translatable="false">e-restoran</string>
    <string name="register">REGISTER</string>
    <string name="search_hint">Search...</string>
    <string name="restaurant_prompt">Select this restaurant?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_here">Are you here?</string>
    <string name="title_activity_login">Login</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="one" translatable="false">1</string>
    <string name="hrvatski" translatable="false">Hrvatski</string>
    <string name="english" translatable="false">English</string>
    <string name="deutsch" translatable="false">Deutsch</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="_0_0" translatable="false">0.0</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="addresses">Addresses:</string>
    <string name="no_addresses">No addresses</string>
    <string name="edit_data">Edit Data</string>
    <string name="reset_password">Reset Password</string>
    <string name="street">Street</string>
    <string name="house_number">House Number</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="notes">Notes</string>
    <string name="add">Add</string>
    <string name="add_new_address">Add New Address</string>
    <string name="ime">name</string>
    <string name="adresa">Address</string>
    <string name="na_in_pla_anja">Payment method</string>
    <string name="pouze_e">Delivery</string>
    <string name="potvrdi">Confirm</string>
    <string name="odustani">Cancel</string>
    <string name="tutorial">Tutorial</string>
    <string name="jezici">languages</string>
    <string name="gost">Guest</string>
    <string name="prijava">Login</string>
    <string name="korisnik">USER</string>
    <string name="gostCaps">GUEST</string>
    <string name="order">Order</string>
    <string name="restaurant">Restaurant</string>
    <string name="you_have_no_orders">You have no orders</string>
    <string name="kartica">Card</string>
    <string name="cash">Cash</string>
    <string name="nazad">back</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="email_username">Email/Username</string>
    <string name="sign_in">Sign In</string>
    <string name="view_as_guest">View as Guest</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registerUpper">Register</string>
    <string name="continueText">Continue</string>
    <string name="order_again">Order Again</string>
    <string name="place_order">Place order</string>
    <string name="hvala_vam_na_povjerenju">Thank you for your trust</string>
    <string name="ocijenite_nas">rate us</string>
    <string name="izbornik">menu</string>
    <string name="ostavite_va_komentar">Leave your comment!</string>
    <string name="dalje">Next</string>
    <string name="prstom_povucite_za_odabir">swipe to select</string>
    <string name="odaberite_restoran">Choose a restaurant</string>
    <string name="povucite_prstom_za_odabir">Swipe to select</string>
    <string name="unutar_izbornika_imamo_opciju_ponavljanja_narudzbe">Within the menu we have the option to repeat the order</string>
    <string name="protresite_za_otvaranje_brzog_izbornika">Shake to open the Quick Menu</string>
    <string name="povratak">Return</string>
    <string name="overview">Overview</string>
    <string name="pick_restaurant">Pick restaurant</string>
    <string name="pick_food">Pick food</string>
    <string name="pick_drinks">Pick drinks</string>
    <string name="predjela">Appetizers</string>
    <string name="glavna_jela">Main courses</string>
    <string name="deserti">Desserts</string>
    <string name="bezalkoholna_pica">Non-alcoholic beverages</string>
    <string name="alkoholna_pica">Alcoholic beverages</string>
    <string name="topli_napitci">Hot drinks</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
    <string name="enter_valid_number">Enter valid number</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="username_must_be_error">Usernam must be longer than 6 characters and and shorter than 30 characters</string>
    <string name="special_characters_error">Special characters are not allowed in username</string>
    <string name="username_taken_error">Username already taken</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_valid_email">Enter valid email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_length_error">Password should be at least 6 characters</string>
    <string name="password_match_error">Password doesn\'t match</string>
    <string name="enter_credit_card">Enter credit card number</string>
    <string name="validate_credit_card">Validate credit card first</string>
    <string name="field_necessary_error">Field necessary</string>
    <string name="change_language_setting">Change Language</string>
    <string name="add_address_setting">Add Address</string>
    <string name="tutorial_setting">Tutorial</string>
    <string name="profile_setting">Profile</string>
    <string name="order_history_setting">Order History</string>
    <string name="log_out_setting">Log Out</string>
    <string name="unexpected_error">An unexpected error occurred.</string>
    <string name="location_error">Turn on location</string>
    <string name="password_reset_text">Password reset email has been sent!</string>
    <string name="something_went_wrong_error">Something went wrong please try again later</string>
    <string name="sign_in_message">Signed in successfully!</string>
    <string name="order_placed_message">Your order has been placed. Thank You for using our application!</string>
    <string name="back_input_message">Thank you for your feedback</string>
    <string name="rateus_string">No rating detected, please rate from 1 to 5</string>
    <string name="registration_success">Registration successful!</string>
    <string name="registration_fail">Registration failed, try again later.</string>
    <string name="stronger_password_error">Please use a stronger password</string>
    <string name="email_malformed_error">Email address is malformed, please use another one</string>
    <string name="email_in_use_error">Email address already in use</string>
    <string name="verify_email_message">Please verify your email first</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="kupon">Coupon</string>
    <string name="iskoristi">Use</string>
    <string name="invalid_coupon">Invalid coupon</string>
    <string name="add_address_message">Please add an address first</string>
    <string name="food_image" translatable="false">food_image</string>
    <string name="restaurant_image" translatable="false">restaurant_image</string>
    <string name="protein">Protein:</string>
    <string name="potassium">Potassium:</string>
    <string name="sodium">Sodium:</string>
    <string name="carbohydrates">Carbohydrates:</string>
    <string name="fat">Fat:</string>
    <string name="calories">Calories:</string>
    <string name="nutrition">Nutrition</string>
    <string name="select_restaurant_message">Select restaurant first!</string>
</resources>
