<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserTypeSelectActivity">

    <Button
        android:id="@+id/tutorijal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:text="@string/tutorial"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/jezici"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_button"
        android:text="@string/jezici"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/tutorijal"
        app:layout_constraintEnd_toEndOf="@+id/tutorijal"
        app:layout_constraintStart_toStartOf="@+id/tutorijal" />

    <ImageButton
        android:id="@+id/gost"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:background="#0000"
        android:src="@drawable/user_anonim"
        android:text="@string/gost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/prijava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:background="#0000"
        android:src="@drawable/user_login"
        android:text="@string/prijava"
        app:layout_constraintBottom_toBottomOf="@+id/gost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gost"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/korisnik"
        app:layout_constraintEnd_toEndOf="@+id/prijava"
        app:layout_constraintStart_toStartOf="@+id/prijava"
        app:layout_constraintTop_toBottomOf="@+id/prijava"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/gostCaps"
        app:layout_constraintEnd_toEndOf="@+id/gost"
        app:layout_constraintStart_toStartOf="@+id/gost"
        app:layout_constraintTop_toBottomOf="@+id/gost" />


</androidx.constraintlayout.widget.ConstraintLayout>