<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Payment">

    <Button
        android:id="@+id/kartica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kartica"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/cash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/kartica"
        app:layout_constraintStart_toStartOf="@+id/kartica"
        app:layout_constraintTop_toBottomOf="@+id/kartica"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/nazad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cash"
        app:layout_constraintStart_toStartOf="@+id/cash"
        app:layout_constraintTop_toBottomOf="@+id/cash"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>